# embedded_rust

life/: .gitignore  Cargo.toml  README.md
life/.cargo/: config.toml
life/src/: main.rs
