[package]
name = "life"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"
nanorand = { version = "0.7.0", default-features = false, features = ["pcg64"] }
rtt-target = "0.4.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.microbit-bsp]
version = "0.3.1-pre"
git = "http://github.com/BartMassey-upstream/microbit-bsp"
branch = "omit-defmt"
default-features = false

[dependencies.embassy-futures]
version = "0.1.1"
default-features = false

[dependencies.embassy-sync]
version = "0.5.0"
default-features = false

[dependencies.embassy-time]
version = "0.3.0"
default-features = false

[dependencies.num-traits]
version = "0.2.18"
default-features = false
features = ["libm"]

[dependencies.embassy-executor]
version = "0.5.0"
features = ["integrated-timers", "arch-cortex-m", "executor-thread"]